hard-gists/215274/run.log
=== Docker Run Log for 215274 ===
Started at: Mi 29. Okt 13:00:13 CET 2025

[2025-10-29 13:00:13] START: Running container for 215274
[2025-10-29 13:00:13] SUCCESS: Container 3519a20a0b1caf8f29fed4252e6b29bb2832454678db4636df7a03c6af4d449b started for 215274
=== Container logs for 215274 ===
  File "/snippet.py", line 89
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 215274 ===
[2025-10-29 13:00:16] INFO: Container 3519a20a0b1caf8f29fed4252e6b29bb2832454678db4636df7a03c6af4d449b has stopped
